# langchain-udemy

./: .gitignore  Makefile  pyproject.toml
documentation-helper/: Makefile  pyproject.toml  setup.cfg
documentation-helper/scripts/: ingestion.py
documentation-helper/src/documentation_helper/: main.py
documentation-helper/src/documentation_helper/backend/: core.py
ice_breaker/: Makefile  README.md
ice_breaker/src/ice_breaker/: app.py  ice_breaker.py
ice_breaker/src/ice_breaker/agents/: linkedin_lookup_agent.py
react/: Makefile  README.md  main.py  pyproject.toml
react/src/react_udemy/: callbacks.py  main.py  main_ez.py
src/ice_breaker/: ice_breaker.py  output_parsers.py
src/ice_breaker/agents/: linkedin_lookup_agent.py
src/ice_breaker/templates/: index.html
src/ice_breaker/tools/: tools.py
