[project]
name = "langchain-udemy-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
]

jupyter = [
    "jupyterlab",
    "jupyterlab_vim"
]

[project.scripts]
react = "react_udemy.main:main"
